k8s/components/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: websites
  labels:
    app.kubernetes.io/name: homepage
    homelab/stack: homepage
spec:
  selector:
    app: homepage
  ports:
    - name: http
      port: 3000
      targetPort: 3000
